# onyx

./: .gitignore  CMakeLists.txt  LICENSE  Onyx.sln  README.md  logo.psd  splash.psd
Onyx/: Onyx.vcxproj  Onyx.vcxproj.filters  tmp.txt
Onyx/resources/models/: Corvette C8.mtl  apples.mtl  bugatti.mtl  zbroyar z-15-LP.mtl
Onyx/resources/shaders/: PC.vert  PNC.vert  PNCT.vert  PT.vert  P_Color.frag  P_Color.vert  UI_Color.frag  UI_Color.vert  UI_Text.frag  UI_Text.vert  UI_Texture.frag  UI_Texture.vert  VC.frag  VC.vert  VCT.frag  VCT.vert  VNC.frag  VNC.vert  VNCT.frag  VNCT.vert  VNT.frag  VNT.vert  VT.frag  VT.vert  V_Color.frag  V_Color.vert  V_XYZtoRGB.frag  V_XYZtoRGB.vert  text.frag
Onyx/src/: Algo.cpp  Algo.h  Camera.cpp  Camera.h  CharRenderable.cpp  CharRenderable.h  Core.cpp  Core.h  ErrorHandler.cpp  ErrorHandler.h  File.cpp  File.h  FileUtils.cpp  FileUtils.h  Fog.cpp  Font.cpp  Font.h  Gamepad.cpp  Gamepad.h  ImageData.cpp  ImageData.h  IndexArray.cpp  IndexArray.h  IndexBuffer.cpp  IndexBuffer.h  InputHandler.cpp  InputHandler.h  Lighting.cpp  Lighting.h  Main.cpp  Material.cpp  Material.h  Math.cpp  Math.h  MathSwizzle.cpp  Mesh.cpp  Mesh.h  MeshPresets.cpp  MeshPresets.h  Model.cpp  (+38 more)
Onyx/tests/: BouncingBallTest.cpp  Main.cpp  PresetTests.cpp  PresetTests.h  Result.cpp  Result.h  UnitTests.cpp  UnitTests.h  WindowTest.cpp
Onyx/tests/shaders/: light.frag  obj.frag  obj.vert
dependencies/include/GLFW/: glfw3.h
dependencies/include/glad/: glad.h
include/: OBJ_Loader.h
include/glad/: glad.h
resources/models/: ball.mtl
src/: CharRenderable.cpp  CharRenderable.h  Core.cpp  ErrorHandler.cpp  Fog.h  Font.h  Gamepad.cpp  IndexBuffer.cpp  InputHandler.cpp  InputHandler.h  Lighting.cpp  Lighting.h  Math.cpp  Model.cpp  ModelRenderable.cpp  Monitor.h  Projection.h  Renderable.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextRenderable.h  TextRenderable3D.h  UiRenderable.cpp  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
tests/: BouncingBallTest.cpp  BouncingBallTest.h  Main.cpp  WindowTest.cpp  WindowTest.h
tests/shaders/: light.frag  light.vert  obj.frag
(+43 files in other folders)
